fix: scss optimization

--- a/styles/_articles.scss
+++ b/styles/_articles.scss
@@ -1,15 +1,14 @@
 .articles {
-  position: relative;
-  overflow: hidden;
+  @include relative-hidden;
   background: url(/images/background/articles-bg-1440.svg) calc(50% - -119px) -121px
     no-repeat;
   background-size: 3016px;
-  @media (width < 1210px) {
+  @media (width < $width-tablet) {
     background: url(/images/background/articles-bg-768.svg) calc(50% + -297px)
       161px no-repeat;
     background-size: 2543px;
   }
-  @media (width < 768px) {
+  @media (width < $width-smartpthone) {
     background: url(/images/background/articles-bg-320.svg) calc(50% + 78px) -199px
       repeat-y;
     background-size: 1175px;
@@ -19,10 +18,10 @@
     flex-wrap: wrap;
     justify-content: space-between;
     row-gap: 136px;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       row-gap: 82px;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       padding-bottom: 22px;
     }
   }
@@ -31,7 +30,7 @@
   //   }
   &__card {
     flex-basis: 45%;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       min-height: 599px;
     }
   }
@@ -45,63 +44,54 @@
   &__card:nth-child(4),
   &__card:nth-child(5) {
     margin-top: -37px;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       margin-top: -42px;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       margin-top: 0px;
       padding-bottom: 0px;
     }
   }
   &__img-box {
-    width: 584px;
-    height: 328px;
+    @include width-heigth($w: 584px, $h: 328px);
     position: relative;
-    @media (width < 1210px) {
-      width: 340px;
-      // height: 224px;
-      height: 249px;
+    @media (width < $width-tablet) {
+      @include width-heigth($w: 340px, $h: 240px);
     }
-    @media (width < 768px) {
-      width: 304px;
-      // height: 224px;
-      height: 373px;
+    @media (width < $width-smartpthone) {
+      @include width-heigth($w: 304px, $h: 373px);
     }
   }
   &__img-box_big {
-    width: 1208px;
-    height: 520px;
+    @include width-heigth($w: 1208px, $h: 520px);
     flex-basis: 100%;
-    // height: 328px;
-    @media (width < 1210px) {
-      height: 320px;
-      width: 704px;
+    @media (width < $width-tablet) {
+      @include width-heigth($w: 704px, $h: 320px);
     }
-    @media (width < 768px) {
-      width: 308px;
-      height: 376px;
+    @media (width < $width-smartpthone) {
+      @include width-heigth($w: 308px, $h: 376px);
     }
   }
   &__card_big-left {
     flex-basis: 31.15%;
     margin-right: 19px;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       flex-basis: 34.6%;
       margin-right: 0px;
       margin-top: -11px;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       flex-basis: 100%;
       height: 90px;
       position: relative;
     }
   }
   &__card_big-right {
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       width: 455px;
       margin-top: 28px;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       width: 308px;
       margin-top: -10px;
     }
@@ -109,7 +99,7 @@
   &__img {
     width: 584px;
     margin-top: 6px;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       width: 340px;
       height: 224px;
     }
@@ -117,7 +107,7 @@
   &__img_big {
     width: 1208px;
     margin-top: -143px;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       width: 704px;
       height: 470px;
       margin-top: -72px;
@@ -133,14 +123,13 @@
     mask-image: url(/images//masks/pic2.svg);
     mask-repeat: no-repeat;
     mask-position: center;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       mask-image: url(/images//masks/pic2-v2.svg);
       margin-top: 25px;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       mask-image: url(/images//masks/pic2-v3.svg);
-      width: 542px;
-      height: 360px;
+      @include width-heigth($w: 542px, $h: 360px);
       margin-left: -120px;
       margin-top: 16px;
     }
@@ -149,14 +138,13 @@
     mask-image: url(/images//masks/pic3.svg);
     mask-repeat: no-repeat;
     mask-position: center;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       mask-image: url(/images//masks/pic3-v2.svg);
       margin-top: 25px;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       mask-image: url(/images//masks/pic3-v3.svg);
-      width: 532px;
-      height: 360px;
+      @include width-heigth($w: 532px, $h: 360px);
       mask-position: 78% center;
       margin-left: -50px;
       margin-top: 18px;
@@ -166,29 +154,27 @@
     mask-image: url(/images/masks/pic4.svg);
     mask-repeat: no-repeat;
     mask-position: center;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       mask-image: url(/images//masks/pic4-v2.svg);
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       mask-image: url(/images//masks/pic4-v3.svg);
       margin-top: -27px;
       margin-left: -139px;
-      height: 450px;
-      width: 581px;
+      @include width-heigth($w: 581px, $h: 450px);
     }
   }
   &__img_mask4 {
     mask-image: url(/images//masks/pic5.svg);
     mask-repeat: no-repeat;
     mask-position: center;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       mask-image: url(/images//masks/pic5-v2.svg);
       margin-top: 25px;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       mask-image: url(/images//masks/pic5-v3.svg);
-      width: 542px;
-      height: 360px;
+      @include width-heigth($w: 542px, $h: 360px);
       margin-left: -120px;
       margin-top: 16px;
     }
@@ -197,14 +183,13 @@
     mask-image: url(/images//masks/pic6.svg);
     mask-repeat: no-repeat;
     mask-position: center;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       mask-image: url(/images//masks/pic6-v2.svg);
       margin-top: 25px;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       mask-image: url(/images//masks/pic6-v3.svg);
-      width: 542px;
-      height: 360px;
+      @include width-heigth($w: 542px, $h: 360px);
       margin-left: -19px;
       margin-top: 16px;
       mask-position: 8%;
@@ -220,12 +205,12 @@
     position: absolute;
     top: -8px;
     right: -40px;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       width: 104px;
       right: 8px;
       top: 32px;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       width: 120px;
       left: auto;
       right: 8px;
@@ -236,12 +221,12 @@
     position: absolute;
     top: -8px;
     right: -40px;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       width: 104px;
       right: 8px;
       top: 32px;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       width: 120px;
       left: 8px;
       right: auto;
@@ -252,12 +237,12 @@
     position: absolute;
     top: -48px;
     right: -40px;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       width: 120px;
       right: 8px;
       top: 14px;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       right: auto;
       left: 8px;
       top: 30px;
@@ -267,14 +252,14 @@
     position: absolute;
     top: -37px;
     left: -55px;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       transform: rotate(15deg);
       width: 164px;
       left: auto;
       right: -2px;
       top: 16px;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       width: 182px;
       right: -3px;
       top: 8px;
@@ -285,13 +270,13 @@
     position: absolute;
     top: -8px;
     left: -40px;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       width: 104px;
       left: auto;
       right: 8px;
       top: 32px;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       width: 120px;
       left: 8px;
       right: auto;
@@ -304,11 +289,11 @@
     justify-content: flex-start;
     padding-top: 68px;
     padding-bottom: 18px;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       padding-top: 24px;
       padding-bottom: 20px;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       padding-top: 18px;
       padding-bottom: 18px;
     }
@@ -318,10 +303,10 @@
     padding-top: 66px;
     justify-content: flex-end;
     flex-wrap: wrap;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       padding-top: 39px;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       justify-content: flex-start;
       padding-top: 28px;
       padding-bottom: 15px;
@@ -332,7 +317,7 @@
     padding: 8px 0px;
     color: $grass;
     @include Nunito15M-SLS;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       padding: 8px 0px;
     }
   }
@@ -340,17 +325,17 @@
     padding: 12px 0px;
     color: $pink;
 
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       margin-right: 10px;
       padding: 8px 0px;
     }
   }
   &__article-item_big:last-child {
     margin-right: 0;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       margin-right: 25px;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       margin-right: 10px;
     }
   }
@@ -360,10 +345,10 @@
     padding: 8px 18px;
     background-color: $grass;
     color: $black;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       margin-left: 0px;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       margin-left: 0px;
     }
   }
@@ -374,12 +359,12 @@
     padding: 8px 18px;
     background-color: $pink;
     color: $black;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       margin-left: 102px;
       margin-right: 27px;
       align-self: flex-start;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       margin-right: 16px;
       margin-left: 0px;
     }
@@ -387,13 +372,13 @@
   &__title {
     @include AchivoH4;
     color: $black;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       width: 340px;
       font-size: 24px;
       font-weight: 500;
       margin-top: -4px;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       width: 308px;
       line-height: 120%;
       margin-top: -2px;
@@ -403,14 +388,14 @@
     font-size: 36px;
     width: 792px;
     padding-top: 47px;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       width: 460px;
       font-weight: 800;
       font-size: 26px;
       padding-top: 0;
       margin-top: -2px;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       width: 290px;
       font-size: 24px;
       margin-top: 2px;
@@ -421,11 +406,11 @@
     color: $black;
     padding-top: 15px;
     width: 500px;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       width: 340px;
       padding-top: 15px;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       width: 308px;
       padding-top: 16px;
     }
@@ -433,12 +418,12 @@
   &__text_big {
     width: 678px;
     padding-top: 9px;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       width: 460px;
       padding-top: 8px;
       padding-bottom: 40px;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       width: 308px;
       padding-top: 16px;
     }
@@ -449,10 +434,10 @@
     flex-wrap: wrap;
     align-items: center;
     padding-top: 19px;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       padding-top: 17px;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       width: 304px;
       justify-content: flex-start;
       margin-top: 0;
@@ -463,10 +448,10 @@
     padding-top: 0;
     margin-top: -9px;
     row-gap: 8px;
-    // @media (width < 1210px) {
+    // @media (width < $width-tablet) {
     //   top: 405px;
     // }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       position: absolute;
       justify-content: flex-start;
       top: 412px;
@@ -476,13 +461,13 @@
     @include Nunito15R-SLS;
     color: $gray35;
     padding-left: 8px;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       padding-right: 9px;
     }
   }
   &__span:not(:last-child) {
     padding-right: 26px;
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       padding-right: 24px;
     }
   }
@@ -492,42 +477,42 @@
     padding-left: 8px;
     padding-right: 9px;
     order: 1;
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       padding-right: 25px;
     }
   }
   &__span_big:not(:last-child) {
     margin-left: 180px;
     order: -1;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       margin-left: 25px;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       margin-left: 0px;
     }
   }
 
   &__icon:first-child {
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       order: -1;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       order: 0;
     }
   }
   &__icon_big {
     order: 2;
-    @media (width < 1210px) {
+    @media (width < $width-tablet) {
       margin-right: 25px;
     }
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       order: 0;
       margin-right: 0px;
     }
   }
   &__icon_big:first-child {
     order: 0;
-    @media (width < 768px) {
+    @media (width < $width-smartpthone) {
       order: -1;
     }
   }
